fixed horizontal overflow

--- a/css/style.css
+++ b/css/style.css
@@ -6,6 +6,7 @@ body {
   font-family: 'Noto Sans KR', sans-serif;
   text-align: center;
   font-size: 18px;
+  overflow-x: hidden;
 }
 
 section {
